Testing H1 to page title plugin

--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,7 @@ gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-paginate # Enable pagination
+  - jekyll-titles-from-headings # Enable H1 to convert to page.title
 
 # Exclude these files from your production _site
 exclude:
