--- a/_config.yml
+++ b/_config.yml
@@ -85,12 +85,17 @@ kramdown:
     # Use existing pygments syntax highlighting css
     css_class: 'highlight'
 
+titles_from_headings:
+  enabled:     true
+  strip_title: true
+  collections: false
+
 # Set the Sass partials directory, as we're using @imports
 sass:
   style: :expanded # You might prefer to minify using :compressed
 
 # Use the following plug-ins
-gems:
+plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
   - jekyll-paginate # Enable pagination
