--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url: "https://Michael.team"
+url: "https://michael.team"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
@@ -41,7 +41,7 @@ defaults:
     scope:
       path: ""
     values:
-      layout: "default"
+      layout: "page"
   -
     scope:
       path: ""
