--- a/_data/main.yml
+++ b/_data/main.yml
@@ -13,7 +13,7 @@ nav:
   url: "/blog/"
 - title: About
   url: "/about/"
-- title: "🇵🇱 Po Polsku"
+- title: "🇵🇱 Polski"
   url: "/pl/"
 - title: "🇪🇸 Español"
   url: "/es/"
