--- a/_config.yml
+++ b/_config.yml
@@ -53,6 +53,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
+      lang: en
   -
     scope:
       path: "global"
@@ -67,6 +68,7 @@ defaults:
     values:
       category: "pl"
       permalink: /pl/:path/
+      lang: pl
   -
     scope:
       path: ""
