--- a/_config.yml
+++ b/_config.yml
@@ -55,8 +55,8 @@ defaults:
       layout: "post"
   -
     scope:
-      path: "/pl/"
-      type: ""
+      path: "pl"
+      type: "posts"
     values:
       lang: "pl"
   -
