--- a/_data/main.yml
+++ b/_data/main.yml
@@ -23,6 +23,12 @@ tags:
   title: "Video presentations"
   subtitle: "Videos and keynote presentations around remote working and promoting #NoOffice communication and lifestlye"
 
+tags_pl:
+
+- name: imag
+  url: "/pl/tag/imag/"
+  title: "iMagazine"
+  subtitle: "Felietony jakie piszę do [iMagazine](https://iMagazine.pl) od początku powstawania tego magazynu"
 
 
 
