--- a/_data/main.yml
+++ b/_data/main.yml
@@ -28,7 +28,7 @@ tags_pl:
 - name: imag
   url: "/pl/tag/imag/"
   title: "iMagazine"
-  subtitle: "Felietony jakie piszę do [iMagazine](https://iMagazine.pl) od początku powstawania tego magazynu"
+  subtitle: "Felietony jakie piszę do [iMagazine](https://iMagazine.pl){:target="_blank"} od początku powstawania tego magazynu"
 
 
 
