Much improved atom

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -1,3 +1,10 @@
+name: "Michael Sliwinski"
+name_pl: "Michał Śliwiński"
+
+title: "Michael.team by Michael Sliwinski"
+title_pl: "Michael.team/PL Michała Śliwińskiego"
+
+
 searchbox: "search..."
 searchbox_no: "Nothing found!"
 
