Archive PL fixed with months in PL

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -38,4 +38,18 @@ tags_pl:
   subtitle: "Felietony jakie piszę do [iMagazine](https://iMagazine.pl) od początku powstawania tego magazynu"
 
 
+months_pl:
+- January: Styczeń
+- February: Luty
+- March: Marzec
+- April: Kwiecień
+- May: Maj
+- June: Czerwiec
+- July: Lipiec
+- August: Sierpień
+- September: Wrzesień
+- October: Październik
+- November: Listopad
+- December: Grudzień
+
 
