--- a/_data/main.yml
+++ b/_data/main.yml
@@ -53,3 +53,5 @@ months_pl:
 - December: Grudzień
 
 months_pll: [Styczeń, Luty, Marzec, Kwiecień, Maj, Czerwiec]
+
+month_pl: "Styczeń, Luty, Marzec, Kwiecień, Maj, Czerwiec, Lipiec"
