Day of the week added

--- a/_data/main.yml
+++ b/_data/main.yml
@@ -37,7 +37,9 @@ tags_pl:
   title: "iMagazine"
   subtitle: "Felietony jakie piszę do [iMagazine](https://iMagazine.pl) od początku powstawania tego magazynu"
 
+week_pl: "Tydzień, Poniedziałek, Wtorek, Środa, Czwartek, Piątek, Sobota, Niedziela"
 month_pl: "Miesiąc, Styczeń, Luty, Marzec, Kwiecień, Maj, Czerwiec, Lipiec, Sierpień, Wrzesień, Październik, Listopad, Grudzień"
 months_pl: "miesiąca, stycznia, lutego, marca, kwietnia, maja, czerwca, lipca, sierpnia, września, października, listopada, grudnia"
+week_es: "Semana, Lunes, Martes, Miércoles, Jueves, Viernes, Sábado, Domingo"
 month_es: "Mes, Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre"
 months_es: "del mes, de enero de, de febrero de, de marzo de, de abril de, de mayo de, de junio de, de julio de, de agosto de, de septiembre de, de octubre de, de noviembre de, de diciembre de"
