--- a/_data/main.yml
+++ b/_data/main.yml
@@ -1,22 +1,35 @@
 name: "Michael Sliwinski"
 name_pl: "Michał Śliwiński"
+name_es: "Michael Sliwinski"
 
 title: "Michael.team by Michael Sliwinski"
-title_pl: "Michael.team/PL Michała Śliwińskiego"
+title_pl: "Michael.team/PL - autor: Michał Śliwiński"
+title_es: "Michael.team/ES de Michael Sliwinski"
 
+descr: "Hello, I am Michael Sliwinski, founder of Nozbe - a to-do app that helps small teams do great things. I write about team productivity, modern work from home #NoOffice and #iPadOnly. I believe that work is not a place you go to, it's a thing you do."
+descrm: "[Hello](/now), I am [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/) - a to-do app that helps small teams do great things. I [write](/archive) about [team productivity](/productivity), working from home [#NoOffice](/tag/nooffice) and [#iPadOnly](/tag/ipadonly). *I believe that work is not a place you go to, it's a thing you do.*"
+descr_pl: "Hej, tu Michał Śliwiński, założyciel Nozbe - aplikacji do zadań dla małych zespołów, które chcą robić wielkie rzeczy. Piszę regularnie do iMagazine o produktywności zespołowej, szczególnie kiedy #NieMaBiura oraz pracy #iPadOnly. Wierzę, że praca to nie jest miejsce do którego idziesz, ale to co robisz."
+descrm_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://nozbe.com/pl) - aplikacji do zadań dla małych zespołów, które chcą robić wielkie rzeczy. [Po polsku](/pl/archiwum) piszę do [iMagazine](/pl/tag/imag) o zarządzaniu czasem i zespołami, #NoOffice oraz #iPadOnly. *Wierzę, że praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
+descr_es: "Hola, soy Michael Sliwinski, fundador de Nozbe - moderno gestor de tareas para pequeños equipos que quieren lograr grandes cosas. Creo que trabajo no es un sitio a donde tienes que ir, pero es lo que tienes que hacer."
+descrm_es: "Hola, soy [Michael Sliwinski](/es/sobremi), fundador de [Nozbe](https://nozbe.com/es) - moderno gestor de tareas para pequeños equipos que quieren lograr grandes cosas. *Creo que trabajo no es un sitio a donde tienes que ir, pero es lo que tienes que hacer.*"
 
 searchbox: "search..."
 searchbox_no: "Nothing found!"
+
+searchbox_pl: "szukaj..."
+searchbox_pl_no: "Nic nie znaleziono!"
+
+searchbox_es: "buscar..."
+searchbox_es_no: "¡No has encontrado nada!"
+
 
 nav_next: Next
 nav_prev: Previous
 nav_footer: "(brought to you by <a href='https://sliwinski.com'>Michael Sliwinski</a> - the founder of <a href='https://nozbe.com'>Nozbe</a>)"
 
 nav:
-- title: Home
+- title: "🌎 Home/English"
   url: "/"
-- title: About
-  url: "/about/"
 - title: "🇵🇱 Polski"
   url: "/pl/"
 - title: "🇪🇸 Español"
