Tags in Spanish and webinar tag

--- a/_config.yml
+++ b/_config.yml
@@ -93,6 +93,11 @@ defaults:
       permalink: /es/:title/
   -
     scope:
+      path: "es/tag"
+    values:
+      layout: "tag"
+  -
+    scope:
       path: ""
       type: "passion"
     values:
