--- a/_data/main.yml
+++ b/_data/main.yml
@@ -6,9 +6,9 @@ title: "Michael.team by Michael Sliwinski"
 title_pl: "Michael.team/PL - autor: Michał Śliwiński"
 title_es: "Michael.team/ES de Michael Sliwinski"
 
-descr: "[Hello](/now), I am [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/) - a to-do app that helps small teams do great things. I [write](/archive) about [team productivity](/productivity), working from home [#NoOffice](/tag/nooffice) and [#iPadOnly](/tag/ipadonly). *I believe that work is not a place you go to, it's a thing you do.*"
-descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://nozbe.com/pl) - aplikacji do zadań dla małych zespołów, które chcą robić wielkie rzeczy. [Po polsku](/pl/archiwum) piszę do [iMagazine](/pl/tag/imag) o zarządzaniu czasem i zespołami, #NoOffice oraz #iPadOnly. *Wierzę, że praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
-descr_es: "Hola, soy [Michael Sliwinski](/es/sobremi), fundador de [Nozbe](https://nozbe.com/es) - moderno gestor de tareas para pequeños equipos que quieren lograr grandes cosas. *Creo que trabajo no es un sitio a donde tienes que ir, pero es lo que tienes que hacer.*"
+descr: "[Hello](/now), I am [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/) - a to-do app that helps small teams do great things. I [write](/archive) about [team productivity](/productivity), [#NoOffice](/tag/nooffice), [#iPadOnly](/tag/ipadonly) and I believe that *work is not a place you go to, it's a thing you do.*"
+descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://nozbe.com/pl) - aplikacji do zadań dla małych zespołów, które chcą robić wielkie rzeczy. [Po polsku](/pl/archiwum) piszę o [zarządzaniu czasem i zespołami](/pl/tag/imagazine). Wierzę, że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
+descr_es: "Hola, soy [Michael Sliwinski](/es/sobremi), fundador de [Nozbe](https://nozbe.com/es) - moderno gestor de tareas para pequeños equipos que quieren lograr grandes cosas. Creo que *trabajo no es un sitio a donde tienes que ir, pero es lo que tienes que hacer.*"
 
 searchbox: "search..."
 searchbox_no: "Nothing found!"
