--- a/_data/main.yml
+++ b/_data/main.yml
@@ -16,6 +16,12 @@ share: "Copy & share"
 share_pl: "Prześlij dalej"
 share_es: "Comparte"
 
+sharet: "Share on Twitter"
+sharet_pl: "Wrzuć na Twittera"
+sharet_es: "Comparte en Twitter"
+
+twitter: "@MSliwinski"
+
 descr: "[Hello](/now), I am [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/) - a to-do app for modern teams. I [write](/archive) about [productivity](/productivity), [#NoOffice](/tag/nooffice), [#iPadOnly](/tag/ipadonly) and I believe that *work is not a place you go to, it's a thing you do.*"
 descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://nozbe.com/pl/) - aplikacji do zadań dla nowoczesnych zespołów. [Po polsku](/pl/archiwum) piszę [o produktywności](/pl/tag/imagazine). Wierzę, że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
 descr_es: "Hola, soy [Michael Sliwinski](/es/sobremi), fundador de [Nozbe](https://nozbe.com/es/) - gestor de tareas para modernos equipos. [Escribo](/es/todo/) sobre [productividad](/es/tag/webinar). Creo que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
