--- a/_data/main.yml
+++ b/_data/main.yml
@@ -5,7 +5,7 @@ name_pl: "Michał Śliwiński"
 name_es: "Michael Sliwinski"
 
 title: "Michael.team by Michael Sliwinski"
-title_pl: "Michael.team/PL - autor: Michał Śliwiński"
+title_pl: "Michael.team/PL Michała Śliwińskiego"
 title_es: "Michael.team/ES de Michael Sliwinski"
 
 locale: en_EN
@@ -26,7 +26,7 @@ read_es: "Sigue leyendo"
 
 twitter: "@MSliwinski"
 
-descr: "[Hello](/now), I'm [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/) - a to-do app for modern teams. I [write](/archive) [about](/tag) [productivity](/productivity), [#NoOffice](/tag/nooffice), [#iPadOnly](/tag/ipadonly) and I believe that *work is not a place you go to, it's a thing you do.*"
+descr: "[Hello](/now), I'm [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/){:target='_blank'} - a to-do app for modern teams. I [write](/archive) [about](/tag) [productivity](/productivity), [#NoOffice](/tag/nooffice), [#iPadOnly](/tag/ipadonly) and I believe that *work is not a place you go to, it's a thing you do.*"
 descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://nozbe.com/pl/) - aplikacji do zadań dla nowoczesnych zespołów. [Po polsku](/pl/archiwum) [piszę](/pl/tag) o [produktywności](/pl/tag/imagazine). Wierzę, że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
 descr_es: "Hola, soy [Michael Sliwinski](/es/sobremi), fundador de [Nozbe](https://nozbe.com/es/) - gestor de tareas para modernos equipos. [Escribo](/es/todo/) [sobre](/es/tag) [productividad](/es/tag/webinar). Creo en que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
 
