--- a/_data/main.yml
+++ b/_data/main.yml
@@ -26,9 +26,9 @@ read_es: "Sigue leyendo"
 
 twitter: "@MSliwinski"
 
-descr: "[Hello](/now), I'm [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/){:target='_blank'} - a to-do app for modern teams. I [write](/archive) [about](/tag) [productivity](/productivity), [#NoOffice](/tag/nooffice), [#iPadOnly](/tag/ipadonly) and I believe that *work is not a place you go to, it's a thing you do.*"
-descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://nozbe.com/pl/) - aplikacji do zadań dla nowoczesnych zespołów. [Po polsku](/pl/archiwum) [piszę](/pl/tag) o [produktywności](/pl/tag/imagazine). Wierzę, że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
-descr_es: "Hola, soy [Michael Sliwinski](/es/sobremi), fundador de [Nozbe](https://nozbe.com/es/) - gestor de tareas para modernos equipos. [Escribo](/es/todo/) [sobre](/es/tag) [productividad](/es/tag/webinar). Creo en que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
+descr: "[Hello](/now), I'm [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/){:target='_blank'} - a to-do app for modern teams. I [write](/archive) [about](/tag) productivity, [#NoOffice](https://nooffice.org){:target='_blank'}, [#iPadOnly](https://ipadonly.com){:target='_blank'} and I believe that *work is not a place you go to, it's a thing you do.*"
+descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://nozbe.com/pl/){:target='_blank'} - aplikacji do zadań dla nowoczesnych zespołów. [Po polsku](/pl/archiwum) [piszę](/pl/tag) o [produktywności](/pl/tag/imagazine). Wierzę, że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
+descr_es: "Hola, soy [Michael Sliwinski](/es/sobremi), fundador de [Nozbe](https://nozbe.com/es/){:target='_blank'} - gestor de tareas para modernos equipos. [Escribo](/es/todo/) [sobre](/es/tag) [productividad](/es/tag/webinar). Creo en que *trabajo no es un sitio a donde vas, sino es algo que haces.*"
 
 searchbox: "search..."
 searchbox_no: "Nothing found!"
@@ -53,21 +53,16 @@ nav:
   url: "/es/"
 
 tags:
-- name: video
-  emoj: "🎬"
-  link: "/tag/video/"
-  titl: "Video presentations"
-  tit2: "Videos and keynote presentations around remote working and promoting #NoOffice communication and lifestlye"
+- name: blogging
+  emoj: "💻"
+  link: "/tag/blogging/"
+  titl: "Blogging using Jekyll"
+  tit2: "I've had a personal blog since 2008. You can browse my full archives at [sliwinski.com](https://sliwinski.com/archive){:target='_blank'}. I've set up this blog using [Jekyll](https://jekyllrb.com){:target='_blank'} and I'll be migrating my old blog posts to here in the future. I really enjoy posting directly from my iPad, writing posts in [iA Writer](https://ia.net/writer){:target='_blank'}, coding in [Textastic](https://www.textasticapp.com){:target='_blank'}, publishing it on [GitHub Pages](https://pages.github.com){:target='_blank'} using [WorkingCopy](https://workingcopyapp.com){:target='_blank'}."
 - name: webinar
   emoj: "💻"
   link: "/tag/webinar/"
   titl: "Webinars"
   tit2: "Webinars I've given as founder of [Nozbe](https://nozbe.com/) and as a personal and team productivity guy. Each one is packed with lots of time and project management tips and tricks I've learned over the years. Make sure to check them out and learn for free!"
-- name: imagazine
-  emoj: "👨🏼‍💻"
-  link: "/tag/imagazine/"
-  titl: "iMagazine"
-  tit2: "I write a monthly column to the leading Polish lifestyle magazine [iMagazine](https://iMagazine.pl) - if you speak Polish, I keep an [archive of most of these articles](/pl/tag/imagazine)"
 
 tags_pl:
 - name: imagazine
@@ -92,6 +87,18 @@ tags_es:
   link: "/es/tag/webinar/"
   titl: "Webinars"
   tit2: "Webinars que preparé como fundador de [Nozbe](https://nozbe.com/es/) y como experto de productividad personal y gestión de los equipos. Cada webinar contiene muchos trucos y consejos, así que disfruta y ¡aprende gratis!"
+
+other_tags:
+- name: video
+  emoj: "🎬"
+  link: "/tag/video/"
+  titl: "Video presentations"
+  tit2: "Videos and keynote presentations around remote working and promoting #NoOffice communication and lifestlye"
+- name: imagazine
+  emoj: "👨🏼‍💻"
+  link: "/tag/imagazine/"
+  titl: "iMagazine"
+  tit2: "I write a monthly column to the leading Polish lifestyle magazine [iMagazine](https://iMagazine.pl) - if you speak Polish, I keep an [archive of most of these articles](/pl/tag/imagazine)"
 
 
 week_pl: "Tydzień, Poniedziałek, Wtorek, Środa, Czwartek, Piątek, Sobota, Niedziela"
