--- a/_data/main.yml
+++ b/_data/main.yml
@@ -26,7 +26,7 @@ read_es: "Sigue leyendo"
 
 twitter: "@MSliwinski"
 
-now: "This is a [“now”](https://nownownow.com/p/Wwy1) page inspired by [Derek Sievers](https://sivers.org/now). It's a “status update“ on my life, my projects and priorities. I try to post a new update [every Friday](/tag/now/) while doing a weekly review. Here's my latest update:"
+now: "This is a [“now”](https://nownownow.com/p/Wwy1){:target='_blank'} page inspired by [Derek Sievers](https://sivers.org/now){:target='_blank'}. It's a “status update“ on my life, my projects and priorities. I try to post a new update [every Friday](/tag/now/) while doing a weekly review. Here's my latest update:"
 
 descr: "[Hello](/now), I'm [Michael Sliwinski](/about), founder of [Nozbe](https://nozbe.com/){:target='_blank'} - a to-do app for modern teams. I [write](/archive) [about](/tag) productivity, [#NoOffice](https://nooffice.org){:target='_blank'}, [#iPadOnly](https://ipadonly.com){:target='_blank'} and I believe that *work is not a place you go to, it's a thing you do.*"
 descr_pl: "Hej, tu [Michał Śliwiński](/pl/omnie), założyciel [Nozbe](https://nozbe.com/pl/){:target='_blank'} - aplikacji do zadań dla nowoczesnych zespołów. [Po polsku](/pl/archiwum) [piszę](/pl/tag) o [produktywności](/pl/tag/imagazine). Wierzę, że *praca to nie jest miejsce do którego idziesz, ale to co robisz.*"
@@ -56,10 +56,20 @@ nav:
 
 tags:
 - name: blogging
-  emoj: "💻"
+  emoj: "⌨️"
   link: "/tag/blogging/"
   titl: "Blogging using Jekyll"
   tit2: "I've had a personal blog since 2008. You can browse my full archives at [sliwinski.com](https://sliwinski.com/archive){:target='_blank'}. I've set up this blog using [Jekyll](https://jekyllrb.com){:target='_blank'} and I'll be migrating my old blog posts to here in the future. I really enjoy posting directly from my iPad, writing posts in [iA Writer](https://ia.net/writer){:target='_blank'}, coding in [Textastic](https://www.textasticapp.com){:target='_blank'}, publishing it on [GitHub Pages](https://pages.github.com){:target='_blank'} using [WorkingCopy](https://workingcopyapp.com){:target='_blank'}."
+- name: now
+  emoj: "📝"
+  link: "/tag/now/"
+  titl: "What am I doing NOW?"
+  tit2: "Every Friday I try to post a new update to my [NOW page](/now). Here are all my past entries."
+- name: guest
+  emoj: "😎"
+  link: "/tag/guest/"
+  titl: "Guest"
+  tit2: "Places where I was invited as a guest: press, interviews, podcasts, conferences..."
 - name: webinar
   emoj: "💻"
   link: "/tag/webinar/"
