--- a/_data/main.yml
+++ b/_data/main.yml
@@ -58,17 +58,17 @@ tags:
 - name: blogging
   emoj: "⌨️"
   link: "/tag/blogging/"
-  titl: "Blogging using Jekyll"
+  titl: "Blogging w/Jekyll"
   tit2: "I've had a personal blog since 2008. You can browse my full archives at [sliwinski.com](https://sliwinski.com/archive){:target='_blank'}. I've set up this blog using [Jekyll](https://jekyllrb.com){:target='_blank'} and I'll be migrating my old blog posts to here in the future. I really enjoy posting directly from my iPad, writing posts in [iA Writer](https://ia.net/writer){:target='_blank'}, coding in [Textastic](https://www.textasticapp.com){:target='_blank'}, publishing it on [GitHub Pages](https://pages.github.com){:target='_blank'} using [WorkingCopy](https://workingcopyapp.com){:target='_blank'}."
 - name: now
   emoj: "📝"
   link: "/tag/now/"
-  titl: "What am I doing NOW?"
+  titl: "Now updates"
   tit2: "Every Friday I try to post a new update to my [NOW page](/now). Here are all my past entries."
 - name: guest
   emoj: "😎"
   link: "/tag/guest/"
-  titl: "Guest"
+  titl: "Guest appearances"
   tit2: "Places where I was invited as a guest: press, interviews, podcasts, conferences..."
 - name: webinar
   emoj: "💻"
