--- a/_data/main.yml
+++ b/_data/main.yml
@@ -28,7 +28,7 @@ read: "Read more"
 read_pl: "Czytaj dalej"
 read_es: "Sigue leyendo"
 
-twitter: "@MSliwinski"
+twitter: "MSliwinski"
 
 now: "This is a [“now”](https://nownownow.com/p/Wwy1){:target='_blank'} page inspired by [Derek Sievers](https://sivers.org/now){:target='_blank'}. It's a “status update“ on my life, my projects and priorities. I try to post a new update [every Friday](/tag/now/) while doing a weekly review. Here's my latest update:"
 
